--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "le_utils",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "file-saver": "^2.0.2",
+    "@angular/forms": "^6.1.9"
+  },
   "description": "Collection of function written during a project bloodbath",
   "main": "index.js",
   "scripts": {
