--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "le_utils",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "dependencies": {
     "lodash": "^4.17.15",
     "file-saver": "^2.0.2",
     "@angular/forms": "^6.1.9"
   },
   "description": "Collection of function written during a project bloodbath",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
